--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,57 @@ textarea {
     cursor: pointer;
 }
 
-#event p {
+#event p, .pastLaunch p {
     margin: 5px;
+}
+
+.pastLaunch {
+    border: 10px solid rgba(237, 221, 157, 0.38);
+    padding: 5px 20px;
+    position: relative;
+}
+
+.pastLaunch:nth-child(2) {
+    margin-top: 80px;
+}
+
+.pastLaunch h3 {
+    height: 30px;
+    margin: 10px 0;
+    display: flex;
+    align-items: center;
+}
+
+.openInfo {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.openInfo span {
+    background: #eddd9d;
+    position: absolute;
+}
+
+.horiSpan {
+    height: 8px;
+    width: 50px;
+    top: 21px;
+}
+
+.vertSpan {
+    height: 50px;
+    width: 8px;
+    left: 21px;
+    transition: 0.2s ease-in;
+    transform: rotateX(0deg);
+}
+
+.hidden {
+    display: none;
+    flex-direction: column;
+    align-items: center;
 }
