--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     color: #eddd9d;
 }
 
-#indexBackground {
+#pageBackground {
     position: fixed;
     top: 0;
     left: 0;
@@ -18,7 +18,7 @@ body {
     z-index: -1;
 }
 
-#indexBackground img {
+#pageBackground img {
     width: 100vw;
     height: 100vh;
 }
@@ -139,14 +139,30 @@ main {
     overflow-y: auto;
 }
 
+.scrollBox::-webkit-scrollbar {
+    width: 10px;
+}
+
+.scrollBox::-webkit-scrollbar-track {
+    background: rgba(237, 221, 157, 0.88);
+}
+
+.scrollBox::-webkit-scrollbar-thumb {
+    background: #807961;
+}
+
+.scrollBox::-webkit-scrollbar-thumb:hover {
+    background: #5e5a4c;
+}
+
 #viewHeight {
     height: calc(100vh - 132px);
 }
 
 #up {
     position: fixed;
-    bottom: 10px;
-    left: 10px;
+    bottom: 20px;
+    left: 20px;
     font-size: 26px;
     border-radius: 50%;
     background: #403e3e;
@@ -193,7 +209,7 @@ textarea {
     background: rgba(252, 248, 227, 0.2)!important;
 }
 
-#event {
+#event, #eventRight {
     position: absolute;
     top: 60px;
     margin: 10px auto;
@@ -206,7 +222,14 @@ textarea {
     flex-direction: column;
     align-items: center;
     transition: transform .2s ease-in;
+}
+
+#event {
     transform-origin: left;
+}
+
+#eventRight {
+    transform-origin: right;
 }
 
 .closed {
@@ -217,7 +240,7 @@ textarea {
     transform: scaleX(1);
 }
 
-#close {
+#close, #closeRight {
     position: absolute;
     right: 10px;
     top: 10px;
@@ -233,21 +256,22 @@ textarea {
     justify-content: center;
 }
 
-#event p, .pastLaunch p {
+#event p, .detailContainer p {
     margin: 5px;
+    line-height: 1.5em;
 }
 
-.pastLaunch {
+.detailContainer {
     border: 10px solid rgba(237, 221, 157, 0.38);
     padding: 5px 20px;
     position: relative;
 }
 
-.pastLaunch:first-child {
+.detailContainer:first-child {
     margin-top: 80px;
 }
 
-.pastLaunch h3 {
+.detailContainer h3 {
     height: 30px;
     margin: 10px 0;
     display: flex;
@@ -288,9 +312,15 @@ textarea {
     align-items: center;
 }
 
-.hidden a {
+.hidden a, #event a, #eventRight a {
     color: inherit;
     font-style: italic;
+}
+
+.flights, .flightsRight {
+    text-decoration: underline;
+    font-style: normal;
+    cursor: pointer;
 }
 
 .spinner-error {
