--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ blockquote {
     margin: 10px 40px;
 }
 
-blockquote a, .hidden a, #event a, #eventRight a, #eventLeft a {
+blockquote a, #event a, #eventRight a, #eventLeft a, .detailContainer a {
     color: inherit;
     font-style: italic;
 }
@@ -332,7 +332,7 @@ iframe {
     border: 10px solid rgba(237, 221, 157, 0.38);
     padding: 5px 20px;
     position: relative;
-    background: rgba(11, 13, 25, 0.25);
+    background: rgba(11, 13, 25, 0.5);
 }
 
 .detailContainer:first-child {
@@ -389,6 +389,10 @@ iframe {
 .historicalDate {
     align-self: flex-start;
     font-style: italic;
+}
+
+#summary {
+    margin-top: 80px;
 }
 
 .spinner-error {
