--- a/css/mobileStyles.css
+++ b/css/mobileStyles.css
@@ -1,20 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans&display=swap');
-
-body {
-    margin: 0;
-    padding: 0;
-    background: #0b0d19;
-    font-family: 'Fira Sans', sans-serif;
-    color: #eddd9d;
-}
-
 #pageBackground {
-    position: fixed;
-    top: 0;
-    left: 0;
     height: 100vh;
-    opacity: 0.8;
-    z-index: -1;
     overflow: hidden;
 }
 
@@ -25,34 +10,18 @@ body {
 }
 
 header {
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1111;
     padding-bottom: 10px;
     background: rgba(11, 13, 25, 0.3);
 }
 
 header h1 {
     font-size: 30px;
-    font-weight: bold;
     margin: 10px;
-    text-shadow: 2px 2px 6px rgba(237, 221, 157, 0.59);
-}
-
-header h1 a {
-    text-decoration: none;
-    color: inherit;
 }
 
 header ul {
-    list-style: none;
     display: none;
     flex-direction: column;
-    align-items: center;
     margin: 0;
     padding: 0;
     background: rgba(11, 13, 25, 0.8);
@@ -67,18 +36,8 @@ header ul {
 
 header li {
     font-size: 22px;
-    font-weight: bold;
     margin: 20px 0;
     padding: 0 10px;
-}
-
-header li a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.current {
-    text-decoration: underline;
 }
 
 #mobileMenuButton {
@@ -123,142 +82,34 @@ p {
     line-height: 1.5em;
 }
 
-.scrollBox {
-    overflow-y: auto;
-}
-
 .scrollBox::-webkit-scrollbar {
     width: 8px;
 }
 
-.scrollBox::-webkit-scrollbar-track {
-    background: rgba(237, 221, 157, 0.88);
-}
-
-.scrollBox::-webkit-scrollbar-thumb {
-    background: #807961;
-}
-
-.scrollBox::-webkit-scrollbar-thumb:hover {
-    background: #5e5a4c;
-}
-
 .gridContainer {
-    display: grid;
-    grid-template-columns: auto;
     grid-template-rows: auto auto auto auto auto;
     grid-row-gap: 20px;
     grid-template-areas: "text1" "pic1" "text2" "pic2" "form";
 }
 
-.centerHeader {
-    text-align: center;
-}
-
-.pic1 {
-    grid-area: pic1;
-}
-
-.text1 {
-    grid-area: text1;
-}
-
-.text2 {
-    grid-area: text2;
-}
-
-.pic2 {
-    grid-area: pic2;
-}
-
-.form {
-    grid-area: form;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px auto;
-}
-
 .spaceXImg {
-    width: 100%;
     outline: 5px solid rgba(237, 221, 157, 0.38);
     outline-offset: -5px;
 }
 
 #up {
-    position: fixed;
     bottom: 20px;
     left: 20px;
-    font-size: 20px;
-    border-radius: 50%;
-    background: #403e3e;
-    color: inherit;
-    cursor: pointer;
     width: 30px;
     height: 30px;
-    display: none;
-}
-
-label {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin: 10px;
-    font-size: 1.4em;
-}
-
-#nameError, #emailError, #msgError {
-    margin: 0 10px;
-    color: #c9504d;
-    display: none;
-}
-
-label input, label textarea {
-    margin: 0 10px;
-    border-radius: 8px;
-    font-size: 16px;
-    border: 2px solid #eee;
 }
 
 label input {
-    width: 200px;
     height: 2.5em;
-}
-
-textarea {
-    width: 200px;
-    resize: none;
-    height: 10em;
-}
-
-.buttons {
-    margin: 30px;
-}
-
-#reset, #submit {
-    margin: 0 30px;
-    padding: 0 10px;
-    height: 2.5em;
-    border-radius: 8px;
-    background: #403e3e;
-    font-size: 1.17em;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-#reset {
-    color: #c9504d;
-}
-
-#submit {
-    color: #83d086;
 }
 
 .singleContainer {
     padding-bottom: 50px;
-    display: flex;
-    flex-direction: column;
 }
 
 #map {
@@ -266,30 +117,11 @@ textarea {
     height: 400px;
 }
 
-.buttonContainer {
-    margin: 20px 10px;
-}
-
-#refresh {
-    padding: 0 10px;
-    height: 2.5em;
-    border-radius: 8px;
-    background: #403e3e;
-    font-size: 1.17em;
-    font-weight: bold;
-    color: inherit;
-    cursor: pointer;
-}
-
 .singleContainer h3 {
     margin: 30px 10px 10px;
 }
 
-blockquote {
-    margin: 10px 40px;
-}
-
-blockquote a, #event a, #eventRight a, #eventLeft a, .detailContainer a, .indexText a, #mobileJump a {
+#mobileJump a {
     color: inherit;
     font-style: italic;
 }
@@ -302,14 +134,6 @@ blockquote a, #event a, #eventRight a, #eventLeft a, .detailContainer a, .indexT
     font-size: 1.5em!important;
 }
 
-.fc-event {
-    cursor: pointer;
-}
-
-.fc-day.fc-today {
-    background: rgba(252, 248, 227, 0.2)!important;
-}
-
 .noGridImg {
     margin: 40px 0 0;
 }
@@ -318,53 +142,19 @@ blockquote a, #event a, #eventRight a, #eventLeft a, .detailContainer a, .indexT
     margin: 10px 20px;
 }
 
-.imgText:last-child {
-    margin-bottom: 30px;
-}
-
 #mobileJump {
     margin: 20px 10px;
 }
 
 #event, #eventRight, #eventLeft {
     padding: 10px 0;
-    z-index: 1111;
-    background: #0b0d19;
     border: 5px solid rgba(237, 221, 157, 0.38);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: transform .2s ease-in;
     position: fixed;
     top: 66px;
     left: 0;
     width: calc(100% - 10px);
     height: calc(100vh - 96px);
     transform-origin: left;
-}
-
-.closed {
-    transform: scaleX(0);
-}
-
-.open {
-    transform: scaleX(1);
-}
-
-#close, #closeRight {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    border-radius: 50%;
-    padding: 6px;
-    width: 2em;
-    height: 2em;
-    background: #403e3e;
-    color: inherit;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 #event p, .detailContainer p, #eventRight p, #eventLeft p {
@@ -378,8 +168,6 @@ iframe {
 .detailContainer {
     border: 5px solid rgba(237, 221, 157, 0.38);
     padding: 5px 0;
-    position: relative;
-    background: rgba(11, 13, 25, 0.5);
 }
 
 .detailContainer:last-child {
@@ -391,56 +179,23 @@ iframe {
 }
 
 .detailContainer h3 {
-    height: 30px;
     width: calc(100vw - 80px);
     margin: 10px;
-    display: flex;
-    align-items: center;
 }
 
 .openInfo {
-    position: absolute;
-    top: 8px;
-    right: 8px;
     width: 40px;
     height: 40px;
-    cursor: pointer;
-}
-
-.openInfo span {
-    background: #eddd9d;
-    position: absolute;
 }
 
 .horiSpan {
-    height: 6px;
     width: 40px;
     top: 17px;
 }
 
 .vertSpan {
     height: 40px;
-    width: 6px;
     left: 17px;
-    transition: 0.2s ease-in;
-    transform: rotateX(0deg);
-}
-
-.hidden {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-}
-
-.flights, .flightsRight {
-    text-decoration: underline;
-    font-style: normal;
-    cursor: pointer;
-}
-
-.historicalDate {
-    align-self: flex-start;
-    font-style: italic;
 }
 
 .aboutImgText {
