--- a/css/highResStyles.css
+++ b/css/highResStyles.css
@@ -45,7 +45,7 @@ main {
     grid-template-rows: 7vh auto auto auto auto 20px;
     grid-row-gap: 30px;
     grid-column-gap: 30px;
-    grid-template-areas: ". . . ." "text1 . pic1 pic1" ". text2 pic1 pic1" "pic2 pic2 form form" "pic2 pic2 form form" ". footer footer .";
+    grid-template-areas: ". . . ." "text1 . pic1 pic1" ". text2 pic1 pic1" "pic2 pic2 form form" "pic2 pic2 form form" "footer footer footer footer";
 }
 
 .flexContainer {
